--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ body, html {
   margin: 0 auto;
   display: block;
   text-align: center;
+  background-image: url("./images/white-wood.jpg");
 }
 
 .container, h1 {
@@ -26,15 +27,20 @@ h4 {
   border: 1px solid #22aa44;
   box-shadow:  -1px 1px #22aa44, -2px 2px #22aa44, -3px 3px #22aa44, -4px 4px #22aa44, -5px 5px #22aa44;
   background-color: #44cc66;
+  background: linear-gradient(#22aa44 #44cc66);
 
 }
 
 .indifferent {
+  border: 1px solid #BDB76B;
   background-color: #dddd22;
+  box-shadow:  -1px 1px #BDB76B, -2px 2px #BDB76B, -3px 3px #BDB76B, -4px 4px #BDB76B, -5px 5px #BDB76B;
 }
 
 .dubious {
+  border: 1px solid #dd4444;
   background-color: #dd4444;
+  box-shadow:  -1px 1px #dd4444, -2px 2px #dd4444, -3px 3px #dd4444, -4px 4px #dd4444, -5px 5px #dd4444;
 }
 
 .column {
@@ -53,4 +59,8 @@ h4 {
 
 .large {
   width: 303%;
+}
+
+img {
+  border: 2px solid black;
 }
